1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong # This is the app as declared in the deployment.
  ports:
    - port: 1235 
      protocol: TCP
      targetPort: 7002 # This is the target port
